--- a/src/main/resources/static/static/customerInfo.html
+++ b/src/main/resources/static/static/customerInfo.html
@@ -306,7 +306,7 @@
                 <tr>
                     <td>用户昵称:</td>
                     <td>
-                        <input class="easyui-textbox" type="text" name="customerAlias" data-options="required:true"/>
+                        <input class="easyui-textbox" type="text" name="customerAlias" />
                     </td>
                     <td>用户编码:</td>
                     <td>
@@ -326,31 +326,31 @@
                 <tr>
                     <td>性别:</td>
                     <td>
-                        <input class="easyui-textbox" name="sex" data-options="required:true"/>
+                        <input class="easyui-textbox" name="sex" />
                     </td>
                     <td>身份证号:</td>
                     <td>
-                        <input class="easyui-textbox" name="idCard" data-options="required:true"/>
+                        <input class="easyui-textbox" name="idCard" />
                     </td>
                 </tr>
                 <tr>
                     <td>地区:</td>
                     <td>
-                        <input class="easyui-textbox" name="area" data-options="required:true"/>
+                        <input class="easyui-textbox" name="area" />
                     </td>
                     <td>注册时间:</td>
                     <td>
-                        <input class="easyui-datetimebox" name="registerTime" data-options="required:true"/>
+                        <input class="easyui-datetimebox" name="registerTime" />
                     </td>
                 </tr>
                 <tr>
                     <td>车辆长度:</td>
                     <td>
-                        <input class="easyui-textbox" name="carSize" data-options="required:true"/>
+                        <input class="easyui-textbox" name="carSize" />
                     </td>
                     <td>车辆荷载人数:</td>
                     <td>
-                        <input class="easyui-textbox" name="carLoadSize" data-options="required:true"/>
+                        <input class="easyui-textbox" name="carLoadSize" />
                     </td>
                 </tr>
                 <tr>
@@ -382,7 +382,7 @@
                 <tr>
                     <td>用户昵称:</td>
                     <td>
-                        <input class="easyui-textbox" type="text" name="customerAlias" data-options="required:true"/>
+                        <input class="easyui-textbox" type="text" name="customerAlias" />
                     </td>
                     <td>用户编码:</td>
                     <td>
@@ -402,31 +402,31 @@
                 <tr>
                     <td>性别:</td>
                     <td>
-                        <input class="easyui-textbox" name="sex" data-options="required:true"/>
+                        <input class="easyui-textbox" name="sex" />
                     </td>
                     <td>身份证号:</td>
                     <td>
-                        <input class="easyui-textbox" name="idCard" data-options="required:true"/>
+                        <input class="easyui-textbox" name="idCard" />
                     </td>
                 </tr>
                 <tr>
                     <td>地区:</td>
                     <td>
-                        <input class="easyui-textbox" name="area" data-options="required:true"/>
+                        <input class="easyui-textbox" name="area" />
                     </td>
                     <td>注册时间:</td>
                     <td>
-                        <input class="easyui-datetimebox" name="registerTime" data-options="required:true"/>
+                        <input class="easyui-datetimebox" name="registerTime" />
                     </td>
                 </tr>
                 <tr>
                     <td>车辆长度:</td>
                     <td>
-                        <input class="easyui-textbox" name="carSize" data-options="required:true"/>
+                        <input class="easyui-textbox" name="carSize" />
                     </td>
                     <td>车辆荷载人数:</td>
                     <td>
-                        <input class="easyui-textbox" name="carLoadSize" data-options="required:true"/>
+                        <input class="easyui-textbox" name="carLoadSize" />
                     </td>
                 </tr>
                 <tr>
